human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_14.wast
(assert_invalid
  (module (func $type-empty-i64 (result i64) (loop)))
  "type mismatch"
)